--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,58 +1,122 @@
-<form>
-  <div class="form-row">
+<div class="container mt-3">
+  <form>
+    <div class="form-row">
       <!-- Nombre y Apellidos -->
-    <div class="form-group col-md-6">
-      <label for="name">Nombre</label>
-      <input type="text" class="form-control" id="name" required>
-    </div>
-    <div class="form-group col-md-6">
-      <label for="surname">Apellidos</label>
-      <input type="text" class="form-control" id="surname" required>
+      <div class="form-group col-md-6">
+        <label for="name">Nombre</label>
+        <input type="text" class="form-control" id="name" required>
+      </div>
+      <div class="form-group col-md-6">
+        <label for="name">Apellidos</label>
+        <input type="text" class="form-control" id="surname" required>
+      </div>
+
+      <!-- Correo y telefono -->
+      <div class="form-group col-md-6">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="phoneNum">Telefono</label>
+        <input type="number" class="form-control" id="phone">
+      </div>
+
+      <!-- Password y repetir password -->
+      <div class="form-group col-md-6">
+        <label for="passw">Password</label>
+        <input type="password" class="form-control" id="passw">
+      </div>
+      <div class="form-group col-md-6">
+        <label for="repeatPassw">Repeat Password</label>
+        <input type="password" class="form-control" id="repeat-passw">
+      </div>
     </div>
 
-      <!-- Correo y Contrasenya -->
-    <div class="form-group col-md-6">
-      <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="email">
+    <div class="form-group">
+      <label for="address">Address</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
     </div>
-    <div class="form-group col-md-6">
-      <label for="inputPassword4">Password</label>
-      <input type="password" class="form-control" id="passw">
+    <div class="form-group">
+      <label for="secondAddress">Address 2</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
     </div>
-  </div>
 
-  <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity">
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="city">Localidad</label>
+        <input type="text" class="form-control" id="city">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="state">Provincia</label>
+        <select id="state" class="form-control">
+          <option selected>Elige provincia</option>
+          <option value="Álava/Araba">Álava/Araba</option>
+          <option value="Albacete">Albacete</option>
+          <option value="Alicante">Alicante</option>
+          <option value="Almería">Almería</option>
+          <option value="Asturias">Asturias</option>
+          <option value="Ávila">Ávila</option>
+          <option value="Badajoz">Badajoz</option>
+          <option value="Baleares">Baleares</option>
+          <option value="Barcelona">Barcelona</option>
+          <option value="Burgos">Burgos</option>
+          <option value="Cáceres">Cáceres</option>
+          <option value="Cádiz">Cádiz</option>
+          <option value="Cantabria">Cantabria</option>
+          <option value="Castellón">Castellón</option>
+          <option value="Ceuta">Ceuta</option>
+          <option value="Ciudad Real">Ciudad Real</option>
+          <option value="Córdoba">Córdoba</option>
+          <option value="Cuenca">Cuenca</option>
+          <option value="Gerona/Girona">Gerona/Girona</option>
+          <option value="Granada">Granada</option>
+          <option value="Guadalajara">Guadalajara</option>
+          <option value="Guipúzcoa/Gipuzkoa">Guipúzcoa/Gipuzkoa</option>
+          <option value="Huelva">Huelva</option>
+          <option value="Huesca">Huesca</option>
+          <option value="Jaén">Jaén</option>
+          <option value="La Coruña/A Coruña">La Coruña/A Coruña</option>
+          <option value="La Rioja">La Rioja</option>
+          <option value="Las Palmas">Las Palmas</option>
+          <option value="León">León</option>
+          <option value="Lérida/Lleida">Lérida/Lleida</option>
+          <option value="Lugo">Lugo</option>
+          <option value="Madrid">Madrid</option>
+          <option value="Málaga">Málaga</option>
+          <option value="Melilla">Melilla</option>
+          <option value="Murcia">Murcia</option>
+          <option value="Navarra">Navarra</option>
+          <option value="Orense/Ourense">Orense/Ourense</option>
+          <option value="Palencia">Palencia</option>
+          <option value="Pontevedra">Pontevedra</option>
+          <option value="Salamanca">Salamanca</option>
+          <option value="Segovia">Segovia</option>
+          <option value="Sevilla">Sevilla</option>
+          <option value="Soria">Soria</option>
+          <option value="Tarragona">Tarragona</option>
+          <option value="Tenerife">Tenerife</option>
+          <option value="Teruel">Teruel</option>
+          <option value="Toledo">Toledo</option>
+          <option value="Valencia">Valencia</option>
+          <option value="Valladolid">Valladolid</option>
+          <option value="Vizcaya/Bizkaia">Vizcaya/Bizkaia</option>
+          <option value="Zamora">Zamora</option>
+          <option value="Zaragoza">Zaragoza</option>
+        </select>
+      </div>
+      <div class="form-group col-md-2">
+        <label for="inputZip">Zip</label>
+        <input type="text" class="form-control" id="inputZip">
+      </div>
     </div>
-    <div class="form-group col-md-4">
-      <label for="inputState">State</label>
-      <select id="inputState" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
+    <div class="form-group">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="gridCheck">
+        <label class="form-check-label" for="gridCheck">
+          Aceptar las condiciones
+        </label>
+      </div>
     </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
-  </div>
-  <button type="submit" class="btn btn-primary">Sign in</button>
-</form>
+    <button type="submit" class="btn btn-primary">Registrar</button>
+  </form>
+</div>
