added registerForm in a new models folder and initialized it in the register component constructor

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -32,15 +32,17 @@
       </div>
     </div>
 
+    <!-- Direccion 1 y 2 -->
     <div class="form-group">
-      <label for="address">Address</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      <label for="address">Direccion</label>
+      <input type="text" class="form-control" id="address" placeholder="1234 Main St">
     </div>
     <div class="form-group">
-      <label for="secondAddress">Address 2</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+      <label for="secondAddress">Direccion 2</label>
+      <input type="text" class="form-control" id="second-address" placeholder="Apartamento or piso">
     </div>
 
+    <!-- Localidad, provincias y Codigo postal -->
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="city">Localidad</label>
@@ -49,6 +51,7 @@
       <div class="form-group col-md-4">
         <label for="state">Provincia</label>
         <select id="state" class="form-control">
+          <!-- Listado de todas las provincias de Espanya -->
           <option selected>Elige provincia</option>
           <option value="Álava/Araba">Álava/Araba</option>
           <option value="Albacete">Albacete</option>
