--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -27,11 +27,11 @@
         <input type="password" class="form-control" name="passw" [(ngModel)]="registerModel.passw" id="passw" required>
       </div>
       <div *ngIf="!this.ok">
-        {{errorMsg}}
+        {{ this.errorMsg }}
       </div>
       <div class="form-group col-md-6">
-        <label for="repeatPassw">Repeat Password</label>
-        <input type="password" class="form-control" id="repeat-passw" required>
+        <label for="validatePassw">Repeat Password</label>
+        <input type="password" class="form-control" [(ngModel)]="registerModel.validatePassw" id="validate-passw" required>
       </div>
     </div>
 
@@ -117,7 +117,7 @@
     </div>
     <div class="form-group">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
+        <input class="form-check-input" type="checkbox" id="gridCheck" required>
         <label class="form-check-label" for="gridCheck">
           Aceptar las condiciones
         </label>
