--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-  <form #registerForm="ngForm">
+  <!--  -->
+  <form (ngSubmit)="onSubmit(registerForm)" #registerForm="ngForm">
     <div class="form-row">
       <!-- Nombre y Apellidos -->
       <div class="form-group col-md-6">
@@ -26,12 +27,12 @@
         <label for="passw">Password</label>
         <input type="password" class="form-control" name="passw" [(ngModel)]="registerModel.passw" id="passw" required>
       </div>
-      <div *ngIf="!this.ok">
-        {{ this.errorMsg }}
-      </div>
       <div class="form-group col-md-6">
         <label for="validatePassw">Repeat Password</label>
-        <input type="password" class="form-control" [(ngModel)]="registerModel.validatePassw" id="validate-passw" required>
+        <input type="password" class="form-control" name="validatePassw" [(ngModel)]="registerModel.validatePassw" id="validate-passw" required>
+      </div>
+      <div class="form-group col-md-12 mt-n2" *ngIf="!this.ok">
+        <small class="form-text text-danger">{{ this.errorMsg }}</small>
       </div>
     </div>
 
