--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -18,7 +18,7 @@
         <input type="email" class="form-control" name="email" [(ngModel)]="registerModel.email" id="email" required>
       </div>
       <div class="form-group col-md-6">
-        <label for="phoneNum">Telefono</label>
+        <label for="phoneNum">Teléfono</label>
         <input type="number" class="form-control" name="phoneNum" [(ngModel)]="registerModel.phoneNum" id="phoneNum" required>
       </div>
 
@@ -31,18 +31,18 @@
         <label for="validatePassw">Repeat Password</label>
         <input type="password" class="form-control" name="validatePassw" [(ngModel)]="registerModel.validatePassw" id="validate-passw" required>
       </div>
-      <div class="form-group col-md-12 mt-n2" *ngIf="!this.ok">
-        <small class="form-text text-danger">{{ this.errorMsg }}</small>
+      <div class="form-group col-md-12 mt-n2" *ngIf="!this.ok || !this.minCharPassw">
+        <small class="alert alert-danger">{{ this.errorMsg }}</small>
       </div>
     </div>
 
     <!-- Direccion 1 y 2 -->
     <div class="form-group">
-      <label for="address">Direccion</label>
+      <label for="address">Dirección</label>
       <input type="text" class="form-control" name="address" [(ngModel)]="registerModel.address" id="address" placeholder="1234 Main St">
     </div>
     <div class="form-group">
-      <label for="secondAddress">Direccion 2</label>
+      <label for="secondAddress">Dirección 2</label>
       <input type="text" class="form-control" name="secondAddress" [(ngModel)]="registerModel.secondAddress" id="second-address" placeholder="Apartamento or piso">
     </div>
 
@@ -53,7 +53,7 @@
         <input type="text" class="form-control" name="city" [(ngModel)]="registerModel.city" id="city">
       </div>
       <div class="form-group col-md-4">
-        <label for="state">Provincia</label>
+        <label for="state">Província</label>
         <select id="state" class="form-control" name="state" [(ngModel)]="registerModel.state">
           <!-- Listado de todas las provincias de Espanya -->
           <option selected>Elige provincia</option>
@@ -112,18 +112,18 @@
         </select>
       </div>
       <div class="form-group col-md-2">
-        <label for="inputZip">Zip</label>
+        <label for="inputZip">Código Postal</label>
         <input type="text" class="form-control" name="zip" [(ngModel)]="registerModel.zipCode" id="zip">
       </div>
     </div>
     <div class="form-group">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck" required>
+        <input class="form-check-input" type="checkbox" [(ngModel)]="isChecked" name="isChecked" id="isChecked" required>
         <label class="form-check-label" for="gridCheck">
           Aceptar las condiciones
         </label>
       </div>
     </div>
-    <button type="submit" [disabled]="!registerForm.form.valid" class="btn btn-primary">Registrar</button>
+    <button type="submit" [disabled]="!registerForm.form.valid || !isChecked" class="btn btn-primary">Registrar</button>
   </form>
 </div>
